fix: popups and z-index

--- a/app/styles/inspector.styl
+++ b/app/styles/inspector.styl
@@ -11,7 +11,7 @@ inspector-divider-color = #242E3B
   opacity: 0.95
   -webkit-font-smoothing: initial
   position: absolute
-  z-index: 1000000
+  z-index: 1010
   color: inspector-font-color
   background-color: inspector-bg-color
   border-radius: 6px
