--- a/app/styles/main.styl
+++ b/app/styles/main.styl
@@ -60,7 +60,7 @@ form
   bottom: 0
   right: 0
   background-color: #fff
-  z-index: 1000000
+  z-index: 1000
   .inner
     position: relative
   .code-bar
