--- a/app/styles/modal.styl
+++ b/app/styles/modal.styl
@@ -31,7 +31,7 @@
   position: fixed;
   top: 10%;
   left: 50%;
-  z-index: 1000000
+  z-index: 10050
   background-color: #ffffff;
 
   border-radius 6px
