--- a/app/styles/nav.styl
+++ b/app/styles/nav.styl
@@ -73,7 +73,7 @@
   absolute: top left
   width: 80px
   bottom: 0
-  z-index: 1000000
+  z-index: 2000
   background: #525864
 
   .nav-header:hover .ball
